# Cmake-Hello-World

./: CMakeLists.txt  CTestConfig.cmake  main.cpp
